fix x-overflowing headline on small resolutions

--- a/src/app/conference-list/conference-list.component.css
+++ b/src/app/conference-list/conference-list.component.css
@@ -2,6 +2,15 @@
     flex: 1 1 auto;
 }
 
+md-toolbar {
+    overflow: auto;
+}
+
+/deep/ md-toolbar-row {
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
 md-toolbar.small-font {
     font-size: 16px;
 }
